--- a/config-repo/gateway.yml
+++ b/config-repo/gateway.yml
@@ -20,6 +20,9 @@ ribbon:
 zuul:
   ignoredServices: '*'
   routes:
+    webapp:
+      path: /**
+      serviceId: webapp
     auth-service:
       path: /uaa/**
       stripPrefix: false
