--- a/config-repo/gateway.yml
+++ b/config-repo/gateway.yml
@@ -25,6 +25,7 @@ zuul:
       serviceId: webapp
     auth-service:
       path: /uaa/**
+      stripPrefix: false
       sensitiveHeaders:
     svca-service:
       path: /svca/**
