--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>1.5.3.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -25,6 +25,7 @@
         <module>auth-service</module>
         <module>svca-service</module>
         <module>svcb-service</module>
+        <module>webapp</module>
         <module>zipkin</module>
     </modules>
 
