--- a/webapp/src/main/resources/bootstrap.yml
+++ b/webapp/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: auth-service
+    name: webapp
   cloud:
     config:
       uri: http://config:8888
@@ -12,10 +12,3 @@ spring:
         max-interval: 10000
         multiplier: 2
         max-attempts: 10
-  session:
-    store-type: redis
-    timeout: 5
-
-
-security:
-  sessions: if-required
